--- a/Personal_website/src/assets/main.css
+++ b/Personal_website/src/assets/main.css
@@ -1,10 +1,14 @@
 @import './base.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+
+html, body, #app {
+  width: 100%;
+  max-width: none;
+  padding: 0;
+  margin: 0;
 }
 
 a,
@@ -21,7 +25,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 100%) {
   body {
     display: flex;
     place-items: center;
