--- a/Personal_website/src/assets/main.css
+++ b/Personal_website/src/assets/main.css
@@ -3,6 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-white text-gray-900;
+}
+
+.dark body {
+  @apply bg-gray-900 text-gray-100;
+}
 
 html, body, #app {
   width: 100%;
